# flask-pysaml2-example

./: Dockerfile  LICENSE  README.md  config.py.example  docker-compose.yml  pyproject.toml  requirements.txt
flask_pysaml2_example/: __init__.py  auth.py  orm.py
flask_pysaml2_example/static/: flask_pysaml2_example.css
flask_pysaml2_example/templates/: base.html  index.html  unauthorized.html  user.html
tests/: test_auth.py
