[tool.poetry]
name = "flask-pysaml2-example"
version = "0.1.0"
description = ""
authors = ["Agustin Barto <abarto@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
pysaml2 = "^7.4.1"
flask-login = "^0.6.2"
flask-sqlalchemy = "^3.0.3"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
