[project]
name = "flask-pysaml2-example"
version = "0.1.0"
description = "SAML Service Provider example built with Flask and pysaml2"
authors = [{ name = "Agustin Barto", email = "abarto@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "flask>=3.1.3,<4",
  "pysaml2>=7.5.4,<8",
  "flask-login>=0.6.3,<0.7",
  "flask-sqlalchemy>=3.1.1,<4",
  "gunicorn>=23.0.0,<24",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["flask_pysaml2_example*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "types-requests>=2.32.4.20260107",
]

[tool.mypy]
python_version = "3.12"
exclude = ["^docs/"]

[[tool.mypy.overrides]]
module = ["flask_login", "saml2", "saml2.*"]
ignore_missing_imports = true
